--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "dist/server.js",
   "type": "module",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "dev": "tsx watch src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
+  "packageManager": "pnpm@10.18.3",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
